# smartepark-smart_electric_parking

./: README.md
code/: LICENCE
code/ros_car2x_trajectory_conversions/: CMakeLists.txt  package.xml
code/ros_car2x_trajectory_conversions/include/ros_car2x_trajectory_conversions/: Conversions.h
code/ros_car2x_trajectory_conversions/launch/: car2x_trajectory_converter.launch
code/ros_car2x_trajectory_conversions/src/: car2x_to_trajectory_converter.cpp
code/ros_lanelet2_visualization/: CMakeLists.txt  LICENSE  package.xml
code/ros_lanelet2_visualization/etc/: example_config.rviz
code/ros_lanelet2_visualization/include/ros_lanelet2_visualization/: Lanelet2Visualization.h
code/ros_lanelet2_visualization/src/: test_lanelet2_visualization.cpp
code/ros_lanelet2_visualization/src/ros_lanelet2_visualization/: Lanelet2Visualization.cpp
code/ros_parking_management/: CMakeLists.txt  README.md  package.xml  required_functions.md
code/ros_parking_management/etc/: circular.osm  sep_vehicle.rviz
code/ros_parking_management/include/ros_parking_management/: Common.h  FilterableVector.h  ParkingAssignment.h  ParkingManagementSystem.h  ParkingPlaner.h  ParkingScene.h  ParkingSpace.h  RosConversions.h  Utils.h  Vehicle.h
code/ros_parking_management/launch/: parking_management_system_node.launch  sep_demo_infrastructure.launch  sep_demo_vehicle.launch
code/ros_parking_management/src/: demo_infrastructure_side_vehicle_components.cpp  demo_vehicle_side.cpp  parking_management_system_node.cpp  vehicle_handler_node.cpp
code/ros_parking_management/src/ros_parking_management/: ParkingAssignment.cpp  ParkingManagementSystem.cpp  ParkingScene.cpp  ParkingSpace.cpp  Vehicle.cpp
code/ros_parking_management_msgs/: .clang-format  CMakeLists.txt  package.xml
code/ros_parking_management_msgs/msg/: CapacityMsg.msg  Car2xVehicleState.msg  GeographicalPositionMsg.msg  ParkPreferencesMsg.msg  ParkingGarageInformation.msg  TrajectoryMsg.msg  VehicleAutonomousGradeMsg.msg  VehicleDimensionsMsg.msg  VehicleIdentificationMsg.msg  VehicleInformationMsg.msg  VehicleLoadingMsg.msg  VehicleMotionInstructionMsg.msg  VehicleStatusMsg.msg  VehicleTypeMsg.msg
code/ros_parking_management_msgs/srv/: AddVehicleRequest.srv  CapacityRequest.srv  ParkoutVehicleRequest.srv  RegisterVehicleRequest.srv  VehiclePositionRequest.srv
gazebo/model/Fasanengarten_Parking_Garage/: model.config  model.sdf
gazebo/model/Fasanengarten_Parking_Garage/meshes/: FZI_Parking_Garage.dae  tg_fasanengarten_7_1.blend  tg_fasanengarten_7_1.dae
gazebo/world/Fasanengarten_Parking_Garage/: Fasanengarten_Parking_Garage_1UG.world
maps/: Fasanengarten_Tiefgarage_lanelet2_1UG.osm  Fasanengarten_Tiefgarage_lanelet2_2UG.osm
sumo/: README.md  gui_config_default.xml  parking_areas.add.xml  simple_underground_parking_level.edg.xml  simple_underground_parking_level.net.xml  simple_underground_parking_level.netccfg  simple_underground_parking_level.nod.xml  simple_underground_parking_level.poly.xml  simple_underground_parking_level.rou.xml  simple_underground_parking_level.sumocfg  sumo_simple_underground_parking.mpeg
