<?xml version="1.0"?>
<package format="2">
  <name>ros_lanelet2_visualization</name>
  <version>1.0.0</version>
  <description>The ros_lanelet2_visualization package</description>

  <maintainer email="schoerner@fzi.de">Philip Schörner</maintainer>

  <license>Copyright (c) 2022, FZI Forschungszentrum Informatik</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_io</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
